manifests/prometheus/templates/argocd-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: argocd-metrics
  namespace: high
spec:
  ports:
  - name: metrics
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app.kubernetes.io/name: argo-cd-server
  type: ClusterIP
status:
  loadBalancer: {}
