manifests/prometheus/templates/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  labels: {}
  annotations:
    # ingress.kubernetes.io/proxy-body-size: 100M
    # ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx-public
  rules:
    - host: prometheus-eu.cs.sandbox.codefresh.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-stack-eu-kube-prom-prometheus
                port:
                  number: 9090
